--- a/task03_0606/Views/Home/Restaurent.cshtml
+++ b/task03_0606/Views/Home/Restaurent.cshtml
@@ -11,14 +11,16 @@
 
     <div class="col-xl-3 col-sm-6 mb-3">
         <div class="card text-white bg-primary o-hidden h-100">
+           
             <div class="card-body">
                 <h5 class="card-title"></h5>
                 <div class="card-body-icon ">
                     <img src="~/picture/1602181025050000001.jpg" title="麥當勞" />
+                   
                 </div>
                 @*<div class="mr-5">26 New Messages!</div>*@
             </div>
-            <a class="card-footer text-white clearfix small z-1" href="#">
+            <a class="card-footer text-white clearfix small z-1" href="~/Home/RestaurentMemberPage?MemberId=1">
                 <span class="float-left">詳細菜單</span>
                 <span class="float-right">
                     <i class="fa fa-angle-right"></i>
