--- a/task03_0606/Views/Products/ManagerIndex.cshtml
+++ b/task03_0606/Views/Products/ManagerIndex.cshtml
@@ -35,7 +35,21 @@
                           {
                         <tr>
                             <td>@Html.DisplayFor(modelItem => item.productId)</td>
-                            <td>@Html.DisplayFor(modelItem => item.picture)</td>
+                            @*<td>@Html.DisplayFor(modelItem => item.picture)</td>*@
+
+                            <td class="ProfileImg">
+                                <img id="img1" src="~/photo/@item.picture" height="30" width="45" />
+                                @*<a title="Click to see the product detail" href="/admin/ProductDetail?productId=@item.productId">
+                                    @{
+                                        if (File.Exists(Server.MapPath(System.Configuration.ConfigurationManager.AppSettings["picture"] + "Small/" + item.productId + "" + item.productId)))
+                                        {
+                                            <img src="@(System.Configuration.ConfigurationManager.AppSettings["picture"] + "Small/" + item.productId + "" + item.productId) " />
+                                        }
+                                        else
+                                        { <img src="~/photo/" alt="" />}
+                                    }
+                                </a>*@
+                            </td>
                             <td>@Html.DisplayFor(modelItem => item.title)</td>
                             <td>@Html.DisplayFor(modelItem => item.price)</td>
                             <td class="alert-danger" width="200">
