--- a/task03_0606/Views/Products/Fastfoodproducts.cshtml
+++ b/task03_0606/Views/Products/Fastfoodproducts.cshtml
@@ -20,7 +20,7 @@
         <div class='product--green'>
             <div class="row"></div>
                 <!-- Button trigger modal -->
-                <img src='~/photo/@db.picture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db.productId" />
+                <img src='~/photo/fastfood/@db.picture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db.productId" />
 
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModalCenter.@db.productId" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle.@db.productId" aria-hidden="true">
@@ -34,7 +34,7 @@
                             </div>
 
                             <div class="modal-body">
-                                <img src='~/photo/@db.picture' width='500' /><br />
+                                <img src='~/photo/fastfood/@db.picture' width='500' /><br />
                                 @db.introduce
                             </div>
                             <div class="modal-footer">
