--- a/task03_0606/Views/Products/ManagerIndex.cshtml
+++ b/task03_0606/Views/Products/ManagerIndex.cshtml
@@ -93,7 +93,9 @@
         <!-- Custom scripts for this page-->
         <script src="js/sb-admin-datatables.min.js"></script>
     </div>
+</body>
 
+</html>
 
 
            
