--- a/task03_0606/Views/Products/Riceproducts.cshtml
+++ b/task03_0606/Views/Products/Riceproducts.cshtml
@@ -19,7 +19,7 @@
         <div class='product--pink'>
             <div class="row"></div>
             <!-- Button trigger modal -->
-            <img src='~/photo/@db1.picture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db1.productId" />
+            <img src='~/photo/rice/@db1.picture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db1.productId" />
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModalCenter.@db1.productId" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle.@db1.productId" aria-hidden="true">
@@ -33,7 +33,7 @@
                         </div>
 
                         <div class="modal-body">
-                            <img src='~/photo/@db1.picture' width='500' /><br />
+                            <img src='~/photo/rice/@db1.picture' width='500' /><br />
                             @db1.introduce
                         </div>
                         <div class="modal-footer">
