--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -44,11 +44,10 @@
                 </li>
                 @*美食分類*@
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
-                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
-                        <i class="fa fa-fw fa-cutlery"></i>
+                    <a class="nav-link" href="~/Products/index">
+                        <i class="fa fa-fw fa-sticky-note"></i>
                         <span class="nav-link-text">美食分類</span>
                     </a>
-                   
                 </li>
 
                 @*商家專用-新訂單*@
