修改註冊驗證為電話號碼

--- a/task03_0606/Views/Member/Login.cshtml
+++ b/task03_0606/Views/Member/Login.cshtml
@@ -12,8 +12,8 @@
         <div class="card-body">
             <form method="post" action="">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">電子信箱：</label>
-                    <input class="form-control" id="email" name="email" type="email" aria-describedby="emailHelp" placeholder="請輸入信箱...">
+                    <label for="phoneNum">手機號碼：</label>
+                    <input class="form-control" id="phoneNum" name="phoneNum" type="tel" maxlength="10" pattern="([0]{1})([9]{1})(\d{8})" required aria-describedby="telHelp" placeholder="請輸入手機號碼...">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">密碼：</label>
