修改OrderCart型態，增加OrderDetial

--- a/task03_0606/Views/Member/OrderCard.cshtml
+++ b/task03_0606/Views/Member/OrderCard.cshtml
@@ -14,91 +14,97 @@
             </li>
             <li class="breadcrumb-item active">訂單</li>
         </ol>
-        <!-- Icon Cards-->
-        <div class="row">
-            <div class="col-xl-3 col-sm-6 mb-3">
-                <div class="card text-white bg-primary o-hidden h-100">
-                    <div class="card-title">
-
-                        <div class="mr-5">第一桌 <i class="fa fa-angle-right"></i> 張三</div>
-                    </div>
-
-                    <div class="card-footer text-white clearfix small z-1">
-                        <h5>滷肉飯x2</h5>
-                        <h5>牛肉麵x2</h5>
-                        <h5>滷肉飯x2</h5>
-                        <h5>牛肉麵x2</h5>
-                        <h5>滷肉飯x2</h5>
-                        <h5>牛肉麵x2</h5>
-                        <span class="pull-right"><a href="#" class="btn btn-success">完成送出</a></span>
-                        
-                    </div>
-                </div>
+        <div class="card mb-3">
+            <div class="card-header bg-primary text-white">
+                <i class="fa fa-bell-o"></i> 第一桌 <i class="fa fa-angle-right "></i> 王五
             </div>
-            <div class="col-xl-3 col-sm-6 mb-3">
-                <div class="card text-white bg-primary o-hidden h-100">
-                    <div class="card-title">
-
-                        <div class="mr-5">第一桌 <i class="fa fa-angle-right"></i> 張三</div>
+            <div class="list-group list-group-flush small">
+                <a class="list-group-item list-group-item-action" href="#">
+                    <div class="media">
+                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
+                        <div class="media-body">
+                            <strong>排骨飯</strong>x
+                            <strong>2</strong>.
+                            <div class="text-muted smaller">今天 5:43 PM - 5分鐘前</div>
+                        </div>
                     </div>
-
-                    <div class="card-footer text-white clearfix small z-1">
-                        <h5>滷肉飯x2</h5>
-                        <h5>牛肉麵x2</h5>
-
-                        <span class="pull-right"><a href="#" class="btn btn-success">完成送出</a></span>
+                </a>
+                <a class="list-group-item list-group-item-action" href="#">
+                    <div class="media">
+                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
+                        <div class="media-body">
+                            <strong>魚丸湯</strong>x
+                            <strong>2</strong>.
+                            <div class="text-muted smaller">今天 5:43 PM - 5分鐘前</div>
+                        </div>
                     </div>
-                </div>
+                </a>
+                <a class="list-group-item list-group-item-action" href="#">
+                    <div class="media">
+                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
+                        <div class="media-body">
+                            <strong>滷肉飯</strong>x
+                            <strong>1</strong>.
+                            <div class="text-muted smaller">今天 5:43 PM - 5分鐘前</div>
+                        </div>
+                    </div>
+                </a>
+                <a class="list-group-item list-group-item-action" href="#">
+                    <div class="media">
+                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
+                        <div class="media-body">
+                            <strong>香草冰淇淋</strong>x
+                            <strong>2</strong>.
+                            <div class="text-muted smaller">今天 5:47 PM - 1分鐘前</div>
+                        </div>
+                    </div>
+                </a>
+                <a class="list-group-item list-group-item-action bg-light" href="#"><i class="fa fa-dollar"></i> 總金額：200 元</a>
+
+                <a class="list-group-item list-group-item-action bg-success text-white" href="#"><i class="fa fa-check btn-success"></i> 完成送出</a>
             </div>
-
-            <div class="col-xl-3 col-sm-6 mb-3">
-                <div class="card text-white bg-primary o-hidden h-100">
-                    <div class="card-title">
-
-                        <div class="mr-5">第一桌 <i class="fa fa-angle-right"></i> 張三</div>
-                    </div>
-
-                    <div class="card-footer text-white clearfix small z-1">
-                        <h5>滷肉飯x2</h5>
-                        <h5>牛肉麵x2</h5>
-
-                        <span class="pull-right"><a href="#" class="btn btn-success">完成送出</a></span>
-                    </div>
-                </div>
+            <div class="card-footer small text-muted">5:48 PM 更新</div>
+        </div>
+        <div class="card mb-3">
+            <div class="card-header bg-primary text-white">
+                <i class="fa fa-bell-o"></i> 第二桌 <i class="fa fa-angle-right "></i> 林六
             </div>
-
-            <div class="col-xl-3 col-sm-6 mb-3">
-                <div class="card text-white bg-primary o-hidden h-100">
-                    <div class="card-title">
-
-                        <div class="mr-5">第一桌 <i class="fa fa-angle-right"></i> 張三</div>
+            <div class="list-group list-group-flush small">
+                <a class="list-group-item list-group-item-action" href="#">
+                    <div class="media">
+                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
+                        <div class="media-body">
+                            <strong>牛肉麵</strong>x
+                            <strong>1</strong>.
+                            <div class="text-muted smaller">今天 5:43 PM - 5分鐘前</div>
+                        </div>
                     </div>
-
-                    <div class="card-footer text-white clearfix small z-1">
-                        <h5>滷肉飯x2</h5>
-                        <h5>牛肉麵x2</h5>
-
-                        <span class="pull-right"><a href="#" class="btn btn-success">完成送出</a></span>
+                </a>
+                <a class="list-group-item list-group-item-action" href="#">
+                    <div class="media">
+                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
+                        <div class="media-body">
+                            <strong>滷肉飯</strong>x
+                            <strong>1</strong>.
+                            <div class="text-muted smaller">今天 5:43 PM - 5分鐘前</div>
+                        </div>
                     </div>
-                </div>
+                </a>
+                <a class="list-group-item list-group-item-action" href="#">
+                    <div class="media">
+                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
+                        <div class="media-body">
+                            <strong>蘋果</strong>x
+                            <strong>1</strong>.
+                            <div class="text-muted smaller">今天 5:47 PM - 1分鐘前</div>
+                        </div>
+                    </div>
+                </a>
+                <a class="list-group-item list-group-item-action bg-light" href="#"><i class="fa fa-dollar"></i> 總金額：100 元</a>
+
+                <a class="list-group-item list-group-item-action bg-success text-white" href="#"><i class="fa fa-check btn-success"></i> 完成送出</a>
             </div>
-
-            <div class="col-xl-3 col-sm-6 mb-3">
-                <div class="card text-white bg-primary o-hidden h-100">
-                    <div class="card-title">
-
-                        <div class="mr-5">第一桌 <i class="fa fa-angle-right"></i> 張三</div>
-                    </div>
-
-                    <div class="card-footer text-white clearfix small z-1">
-                        <h5>滷肉飯x2</h5>
-                        <h5>牛肉麵x2</h5>
-
-                        <span class="pull-right"><a href="#" class="btn btn-success">完成送出</a></span>
-                    </div>
-                </div>
-            </div>
-
+            <div class="card-footer small text-muted">5:48 PM 更新</div>
         </div>
 
     </div>
